# serde-scale-wrap

./: Cargo.toml  README.md
src/: lib.rs
